# pkg/webhook/default_server/uniteddeployment/validating/uniteddeployment_validation.go
@@ -1,3 +1,19 @@
+/*
+Copyright 2019 The Kruise Authors.
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+*/
+
 package validating
 
 import (
@@ -94,10 +110,10 @@ func validateUnitedDeploymentSpec(spec *appsv1alpha1.UnitedDeploymentSpec, fldPa
 		allErrs = append(allErrs, field.Invalid(fldPath.Child("topology", "subset"), sumReplicas, fmt.Sprintf("if replicas of all subsets are provided, the sum of indicated subset replicas %d should equal UnitedDeployment replicas %d", sumReplicas, expectedReplicas)))
 	}
 
-	if spec.Strategy.ManualUpdate != nil {
-		for subset := range spec.Strategy.ManualUpdate.Partitions {
+	if spec.UpdateStrategy.ManualUpdate != nil {
+		for subset := range spec.UpdateStrategy.ManualUpdate.Partitions {
 			if !subSetNames.Has(subset) {
-				allErrs = append(allErrs, field.Invalid(fldPath.Child("strategy", "partitions"), spec.Strategy.ManualUpdate.Partitions, fmt.Sprintf("subset %s does not exist", subset)))
+				allErrs = append(allErrs, field.Invalid(fldPath.Child("updateStrategy", "partitions"), spec.UpdateStrategy.ManualUpdate.Partitions, fmt.Sprintf("subset %s does not exist", subset)))
 			}
 		}
 	}
